<?xml version="1.0" encoding="utf-8"?>
<!-- StudentName                 Abdulkadir Abdulrehman -->
<!-- StudentID           S1712579-->
<!-- MPD: Coursework-->
<!--program of study:computing -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MapsActivity" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_margin="10dp">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ic_title"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="80dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_title" />

                <ImageView
                    android:id="@+id/ic_magnitude"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_magnitude" />

                <ImageView
                    android:id="@+id/ic_depth"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/ic_depth" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_margin="10dp">

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ic_category"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="80dp"
                    android:src="@drawable/ic_category" />

                <ImageView
                    android:id="@+id/ic_date"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_date" />

                <ImageView
                    android:id="@+id/ic_time"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/ic_time" />


                <ImageView
                    android:id="@+id/ic_copyright"
                    android:layout_width="44dp"
                    android:layout_height="44dp"
                    android:layout_marginLeft="7dp"
                    android:layout_marginTop="15dp"
                    android:src="@drawable/ic_copyright" />

            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

    <Button
        android:id="@+id/Backbtn"
        android:layout_width="30dp"
        android:layout_height="29dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="8dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/ic_cancel"
        android:onClick="Backbtn" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/PageTitle"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_marginTop="10dp"
            android:background="@color/TitleBackground"
            android:gravity="center"
            android:text="Text"
            android:textColor="@color/colorPrimary"
            android:textSize="17dp"
            android:typeface="serif" />
    </RelativeLayout>


</RelativeLayout>

