<?xml version="1.0" encoding="utf-8"?>
<!-- StudentName                 Abdulkadir Abdulrehman -->
<!-- StudentID           S1712579-->
<!-- MPD: Coursework-->
<!--program of study:computing -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:title=""
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView"
        />

</menu>