<?xml version="1.0" encoding="utf-8"?>
<!-- StudentName                 Abdulkadir Abdulrehman -->
<!-- StudentID           S1712579-->
<!-- MPD: Coursework-->
<!--program of study:computing -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context=".MainActivity">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:scrollbars="vertical" />


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_alignParentBottom="true">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/acknowledgement"
                android:layout_marginTop="0dp"
                android:background="@color/colorPrimary"
                android:text="@string/acknowledgement"
                android:textAlignment="center"
                android:textColor="@color/Title"
                android:textSize="9dp"
                android:textStyle="bold"
                android:typeface="serif" />

            <Button
                android:id="@+id/acknowledgement"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:background="#00FF0000"
                android:onClick="acknowledgement" />


        </RelativeLayout>


    </RelativeLayout>
</LinearLayout>